# TNFR-LFS

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  complexity_report.txt  lychee.toml  maintainability_index.txt  mkdocs.yml  pylint_report.json  pyproject.toml  requirements-dev.txt  requirements.txt  tnfr-lfs.toml  tnfr_lfs.toml
.github/: test-areas.yml
.github/workflows/: ci.yml  release.yml  similar-tests.yml
benchmarks/: __init__.py  build_goals_benchmark.py  delta_cache_benchmark.py  dynamic_multipliers_benchmark.py  operator_detection_structural_benchmark.py  packet_pool_benchmark.py  segmentation_view_benchmark.py  spectrum_goertzel_benchmark.py
config/: global.toml  plugins.toml
data/: BL1_XFG_baseline.csv  lfs_class_overrides.toml  test1.raf
data/cars/: BF1.toml  FBM.toml  FO8.toml  FOX.toml  FXO.toml  FXR.toml  FZ5.toml  FZR.toml  LX4.toml  LX6.toml  MRT.toml  RAC.toml  RB4.toml  UF1.toml  UFR.toml  XFG.toml  XFR.toml  XRG.toml  XRR.toml  XRT.toml
data/csv/: DriftAngle.csv  LatG.csv  brake.csv  camberFL.csv  elevation.csv  hb.csv  powerFL.csv  powerFR.csv  powerRL.csv  rotwhspFL.csv  slipratioFR.csv  slipratioRR.csv  steer.csv  suspensiontravelremainingFL.csv  suspensiontravelremainingRL.csv  suspensiontravelremainingRR.csv  tyreloadFL.csv  verticalwheelspeedFR.csv  verticalwheelspeedRL.csv  verticalwheelspeedRR.csv  whangFL.csv
data/profiles/: formula_mid.toml  prototype_low.toml  road_large_rwd.toml  road_medium_fwd.toml  touring_car.toml
data/track_profiles/: p_autocross.toml  p_balanced_long.toml  p_balanced_medium.toml  p_balanced_short.toml  p_fast_long.toml  p_fast_medium.toml  p_rallycross.toml  p_roval_long.toml  p_technical_long.toml  p_technical_medium.toml  p_technical_short.toml
data/tracks/: AU.toml  KY.toml  RO.toml  SO.toml
docs/: DESIGN.md  DEVELOPMENT.md  __init__.py  advanced_workflows.md  api_reference.md  benchmarks.md  brake_thermal_proxy.md  calibration.md  cli.md  cli_deep_dive.md  detection_config_plan.md  examples.md  examples_gallery.md  index.md  macros.py  operators_mapping.md  plugins.md  presets.md  release_process.md  setup_equivalences.md  setup_plan.md  spanish_translation_inventory.md  telemetry.md  tnfr_translation_glossary.md  tutorials.md
docs/es/: DESIGN.md  DEVELOPMENT.md  api_reference.md  index.md  tutorials.md
docs/presets/: AS3_FZR.toml  BL1_XFG.toml  KY2R_FXR.toml
docs/reference/autoapi/: index.md
examples/: export_to_csv.py  ingest_and_recommend.py  quickstart.sh
modifiers/combos/: fo8__p_fast_long.toml  formula__p_fast_long.toml  gtr_mid__p_balanced_medium.toml  gtr_rwd__p_fast_long.toml  lx__p_technical_short.toml  rallycross__p_rallycross.toml  tbo__p_balanced_short.toml  ufr__p_autocross.toml
src/tnfr_core/: __init__.py  _canonical.py
src/tnfr_core/config/: __init__.py  (+1 more)
src/tnfr_lfs/: __init__.py  __main__.py  _version.py  cache_settings.py  config_loader.py  configuration.py  processing.py  session.py  track_loader.py
tests/: .gitignore  README.md  __init__.py  conftest.py  profile_manager_helpers.py  test_abtest.py  test_acceptance_pipeline.py  test_acquisition.py  test_analysis_abtest.py  test_brake_thermal.py  test_calibrate_detectors.py  test_cli.py  test_cli_io.py  test_cli_osd.py  test_cli_parser.py  test_coherence.py  test_coherence_calibration.py  test_compat_shims.py  test_config_loader.py  test_config_loader_core.py  test_contextual_delta.py  test_core_interfaces.py  test_core_metrics.py  test_core_operators.py  test_core_public_api.py  test_core_resonance.py  test_core_shim.py  test_core_spectrum.py  test_epi.py  test_export_html_ext.py  test_exporters.py  test_fusion_calibration.py  test_fusion_helpers.py  test_ingestion.py  test_insim.py  test_io_playbook.py  test_io_profiles.py  test_io_raf.py  test_label_check.py  test_lfs_native_exporter.py  (+35 more)
tests/_report/: similar_tests.json  theory_impl_matrix.md
tests/data/: car_track_profiles.json  synthetic_stint.csv
tests/helpers/: __init__.py  abtest.py  cli.py  constants.py  epi.py  microsector.py  osd.py  packets.py  packs.py  plugins.py  profile_manager.py  recommender.py  replay_bundle.py  setup.py  steering.py  telemetry.py  udp.py
tests/ingestion/: test_reorder_buffer.py
tests/plugins/: conftest.py  test_config.py  test_interfaces.py  test_manager.py  test_plugin_integration.py  test_registry.py
tests/recommender/: __init__.py  test_cache_keys.py
tnfr_lfs/: __init__.py  __main__.py  _pack_resources.py  _version.py  cache_settings.py  config_loader.py  constants.py  processing.py  session.py  track_loader.py
tnfr_lfs/acquisition/: __init__.py  fusion.py  insim.py  outgauge_udp.py  outsim_client.py  outsim_udp.py
tnfr_lfs/analysis/: __init__.py  abtest.py  brake_thermal.py  robustness.py
tnfr_lfs/cli/: __init__.py  app.py  common.py  compare.py  io.py  osd.py  pareto.py  parser.py  tnfr_lfs_cli.py  workflows.py
tnfr_lfs/core/: __init__.py  archetypes.py  cache.py  coherence.py  coherence_calibration.py  contextual_delta.py  delta_utils.py  dissonance.py  epi.py  epi_models.py  metrics.py  operator_detection.py  operators.py  phases.py  resonance.py  segmentation.py  spectrum.py  structural_time.py  utils.py
tnfr_lfs/data/: __init__.py  context_factors.toml  fusion_calibration.toml  threshold_profiles.toml
tnfr_lfs/examples/: __init__.py  quickstart_dataset.py
tnfr_lfs/exporters/: __init__.py  lfs_native.py  report_extended.py  setup_plan.py
tnfr_lfs/ingestion/: _socket_poll.py  fusion.py  live.py  outgauge_udp.py  outsim_client.py  outsim_udp.py
tnfr_lfs/io/: __init__.py  logs.py  profiles.py  raf.py  replay_csv_bundle.py
tnfr_lfs/recommender/: __init__.py  pareto.py  rules.py  search.py
tnfr_lfs/utils/: __init__.py  logging.py
tnfr_lfs_pack/: __init__.py
tools/: calibrate_detectors.py  check_docs_language.py  check_mkdocs_reference.py  generate_autoapi_docs.py  label_check.py  profile_insights.py  report_calibration.py  report_similar_tests.py  tnfr_theory_audit.py  verify_tnfr_parity.py
typing_targets/: __init__.py  quickstart_dataset.py
(+374 files in other folders)
